[package]
authors = ["Martin Amps <https://twitter.com/martinamps>"]
name = "starter-snake-rust"
version = "1.0.0"
edition = "2018"

homepage = "https://play.battlesnake.com"
repository = "https://github.com/BattlesnakeOfficial/starter-snake-rust/"

readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[dependencies]
log = "*"
env_logger = "*"

rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = [
    "json",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.8"
regex = "1"
