[package]
authors = ["Adrien 'Larandar' DUDOUIT-EXPOSITO <https://twitter.com/TheLarandar>"]
name = "battlesnake"
version = "1.0.0"
edition = "2018"

homepage = "https://play.battlesnake.com"
repository = "https://github.com/Larandar/battlesnake/"

readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[dependencies]
log = "*"
env_logger = "*"

rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = [
    "json",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.8"
regex = "1"
